# mobile_alerts

./: .gitignore  Cargo.toml  README.md
migrations/2021-12-21-201702_create_devices/: down.sql  up.sql
migrations/2022-01-05-190502_create_measurements/: down.sql  up.sql
src/: main.rs
src/db/: mod.rs  schema.rs
