[package]
name = "mobile_alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
ctrlc = "3.2.1"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
