[package]
name = "mobile_alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
ctrlc = "3.2.1"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
ureq = { version = "2.4.0", features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
